--- a/websprite/256.html
+++ b/websprite/256.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>256 Relevat Images</title>
+    <link rel="stylesheet" href="256.css">
+    <title>256 Relevant Images</title>
 </head>
 <body>
-    <h1>A Book made up of 256 relevant images <br> for me Lourdes Salazar Castillo</h1>
+    <div class="contents">
+    <h2>A Book made up of 256 relevant images <br> for me Lourdes Salazar Castillo</h2>
     <img src="images/ezgif.com-gif-maker-3.gif">
+    <h2> Poster for a WIP project about curation <br>of identity and style during the internet age</h2>
+    <img src="images/posters_icore-04 copy.jpg" width="400">
+    </div>  
 </body>
 </html>
