--- a/websprite/girlonline.html
+++ b/websprite/girlonline.html
@@ -13,23 +13,23 @@
             <h1>Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: ★Girl Onli3 ★Riot Grrrl Posters <br> ★Scroll ★Caps ★Structures for life ★Blah</h2>
+            <h2>Projects: <a class="selected" href=girlonline.html>★Girl Onlin3</a> <a href="louphoria.html">★Riot Grrrl Posters</a> <br> ★Scroll ★Caps ★Structures for life <br> ★Blah etcetera</h2>
         </div>
     </div>
-    <div class="images">
+    <div class="images2">
         <div class="img1">
-            <img src="./images/manifesto1.jpg">
+            <img class="image2" src="./images/louprint1.jpg">
         </div>
-        <div class="proj">Typographical posters inspired by <br> the Riot Grrl Manifesto <br> </div>
+        <div class="proj">Girl Online3 is a publication <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
         <div class="img2">
-            <img src="./images/MANIFESTO_DRAFTS-03.jpg">
+            <img class="image2" src="./images/louweb2.jpg">
         </div>
         <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
         <div class="img1">
-            <img src="./images/manifesto2.png">
+            <img class="image2" src="./images/louweb3.jpg">
         </div>
         <div class="img2">
-            <img src="./images/Manifesto scan 1.jpg">
+            <img class="image2" src="./images/igirlslide1.jpg">
         </div>
     </div>
 </body>
