--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="louphoria.css">
-    <title>Girl Onlin3</title>
+    <title>etcetera</title>
 </head>
 <body>
     <div class="title">
@@ -13,7 +13,7 @@
             <h1>Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html">★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a class="selected" href=Structures.html>★Structures for life </a> <br> <a href="">★Social</a> <a href="time.html">★Time</a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="louphoria.html">★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.htmls>★Structures for life </a> <br> <a href="">★Social</a> <a href="time.html">★Time</a><a class="selected" href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="images2">
