--- a/websprite/lou/scroll.html
+++ b/websprite/lou/scroll.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="louphoria.css">
-    <title>Lourdes Salazar</title>
+    <title>scroll</title>
 </head>
 <body>
     <div class="title">
@@ -13,23 +13,20 @@
             <h1>Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: ★Riot Grrrl Posters ★Blah ★Blah ★Blah ★Blah</h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a class="selected" href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">★Social</a> <a href="time.html">★Time</a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="images">
         <div class="img1">
-            <img src="./images/manifesto1.jpg">
+            <img src="./images/scroll.gif">
         </div>
         <div class="proj">Typographical posters inspired by <br> the Riot Grrl Manifesto <br> </div>
         <div class="img2">
-            <img src="./images/MANIFESTO_DRAFTS-03.jpg">
+            <img src="./images/scrolla.gif">
         </div>
         <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
         <div class="img1">
-            <img src="./images/manifesto2.png">
-        </div>
-        <div class="img2">
-            <img src="./images/Manifesto scan 1.jpg">
+            <img src="./images/scrollpic.png">
         </div>
     </div>
 </body>
