--- a/websprite/lou/Structures.html
+++ b/websprite/lou/Structures.html
@@ -13,23 +13,20 @@
             <h1>Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html">★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a class="selected" href=Structures.html>★Structures for life </a> <br> <a href="">★Social</a> <a href="time.html">★Time</a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a class="selected" href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
-    <div class="images2">
-        <div class="img1">
-            <img class="image2" src="./images/louprint1.jpg">
-        </div>
+    <div class="imagesniki">
+        <img class="image2" src="./images/NikiDeSaintPhalle1.png">
+        <img class="image2" src="./images/NikiDeSaintPhalle2.png">
+    </div>
         <div class="proj">Girl Online3 is a publication <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
-        <div class="img2">
-            <img class="image2" src="./images/louweb2.jpg">
-        </div>
         <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
         <div class="img1">
-            <img class="image2" src="./images/louweb3.jpg">
+        <img class="image2" src="./images/niki.gif">
         </div>
         <div class="img2">
-            <img class="image2" src="./images/igirlslide1.jpg">
+        <img class="image2" src="./images/niki2.gif">
         </div>
     </div>
 </body>
