--- a/websprite/lou/scroll.html
+++ b/websprite/lou/scroll.html
@@ -13,20 +13,20 @@
             <h1>Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a class="selected" href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">★Social</a> <a href="time.html">★Time</a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a class="selected" href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="images">
         <div class="img1">
-            <img src="./images/scroll.gif">
+            <img src="./images/scroll.gif" width="300px">
         </div>
         <div class="proj">Typographical posters inspired by <br> the Riot Grrl Manifesto <br> </div>
         <div class="img2">
-            <img src="./images/scrolla.gif">
+            <img src="./images/scrolla.gif" width="300px">
         </div>
         <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
         <div class="img1">
-            <img src="./images/scrollpic.png">
+            <img src="./images/scrollpic.png" width="300px">
         </div>
     </div>
 </body>
