--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -13,7 +13,7 @@
             <h1>Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">  ★Social</a> <a class="selected" href="time.html">★Time</a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">  ★Renou</a> <a class="selected" href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="images2">
