--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -13,16 +13,16 @@
             <h1>Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="louphoria.html">★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.htmls>★Structures for life </a> <br> <a href="">★Social</a> <a href="time.html">★Time</a><a class="selected" href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="louphoria.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a class="selected" href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="images2">
         <div class="img1">
-            <img class="image2" src="./images/louprint1.jpg">
+            <img class="image2" src="./images/lush.gif">
         </div>
         <div class="proj">Girl Online3 is a publication <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
         <div class="img2">
-            <img class="image2" src="./images/louweb2.jpg">
+            <img class="image2" src="./images/">
         </div>
         <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
         <div class="img1">
