--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="louphoria.css">
     <title>scroll</title>
 </head>
-<body>
+<body class="main">
     <div class="title">
         <div class="titleColumn">
-            <h1>Lourdes Salazar</h1>
+            <h1><a class="selected" href="lou.html">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <a href=caps.html> ★Caps </a> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Social</a> <a href="time.html">★Time</a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <a href=caps.html> ★Caps </a> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
+    <img src="./images/hearthands.jpg" style="width: 100%;">
     </div>
 </body>
 </html>
