--- a/websprite/lou/riot.html
+++ b/websprite/lou/riot.html
@@ -13,23 +13,23 @@
             <h1>Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a class="selected" href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">★Social</a> <a href="time.html">★Time</a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a class="selected" href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="images">
         <div class="img1">
-            <img src="./images/manifesto1.jpg">
+            <img src="./images/manifesto1.jpg" width="500px">
         </div>
         <div class="proj">Typographical posters inspired by <br> the Riot Grrl Manifesto <br> </div>
         <div class="img2">
-            <img src="./images/MANIFESTO_DRAFTS-03.jpg">
+            <img src="./images/MANIFESTO_DRAFTS-03.jpg" width="500px">
         </div>
         <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
         <div class="img1">
-            <img src="./images/manifesto2.png">
+            <img src="./images/manifesto2.png" width="500px">
         </div>
         <div class="img2">
-            <img src="./images/Manifesto scan 1.jpg">
+            <img src="./images/Manifesto scan 1.jpg" width="500px">
         </div>
     </div>
 </body>
