--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -13,18 +13,18 @@
             <h1 class="overlay">Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">  ★Social</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">  ★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="images2">
         <img class="image3" src="./images/loom1.png">
-        <div class="projux1">Product Design Case Study </div>
+        <div class="projux1">Digital Product Design Case Study </div>
         <img class="image3" src="./images/loom4.png">
-        <div class="projux2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
+        <div class="projux2">Loom is a time banking app where the currency is time this app was meant to imitate and app that would belong in the gig economy inspired by the concept of time banking this app case study is meant to imitate the idealism of some of this digital spaces. (Not actually meant to be a real app but more of an exercise in ux/ui that is more so than anything a bit satirical). </div>
         <img class="image3" src="./images/loom5.png">
         <img class="image3" src="./images/loom6.png">
         <img class="image3" src="./images/loom7.png">
-        <div class="projux3">Girl Online3 is a publication <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
+        <div class="projux3">2021 <br> parsons school of design <br> the Riot Grrl Manifesto <br> </div>
     </div>
 </body>
 </html>
