--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -20,7 +20,7 @@
         <div class="img1">
             <img class="image2" src="./images/lush.gif">
         </div>
-        <div class="proj">Girl Online3 is a publication <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
+        <div class="proj">2022 <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
         <div class="img2">
             <img class="image2" src="./images/">
         </div>
