caps comment temp

--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -13,7 +13,7 @@
             <h1 class="overlay">Lourdes Salazar</h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">  ★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!-- ★Caps --> <a href=Structures.html>★Structures for life </a> <br> <a href="">  ★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="images2">
@@ -24,7 +24,7 @@
         <img class="image3" src="./images/loom5.png">
         <img class="image3" src="./images/loom6.png">
         <img class="image3" src="./images/loom7.png">
-        <div class="projux3">2021 <br> parsons school of design <br> the Riot Grrl Manifesto <br> </div>
+        <div class="projux3">2021 <br> parsons school of design <br> Digital product design <br> </div>
     </div>
 </body>
 </html>
