--- a/websprite/lou/Structures.html
+++ b/websprite/lou/Structures.html
@@ -5,29 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="louphoria.css">
-    <title>Girl Onlin3</title>
+    <title>Structures for life</title>
 </head>
 <body>
     <div class="title">
         <div class="titleColumn">
-            <h1>Lourdes Salazar</h1>
+            <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!--★Caps--> <a class="selected" href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <a href=caps.html>★Caps</a> <a class="selected" href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html">★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
-    <div class="imagesniki">
-        <img class="image2" src="./images/NikiDeSaintPhalle1.png">
-        <img class="image2" src="./images/NikiDeSaintPhalle2.png">
-    </div>
-        <div class="proj">Girl Online3 is a publication <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
-        <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
-        <div class="img1">
-        <img class="image2" src="./images/niki.gif">
-        </div>
-        <div class="img2">
-        <img class="image2" src="./images/niki2.gif">
-        </div>
+    <div class="images">
+        <div class="proj1">Gallery Posters<br>2020</div>
+        <img class="img2" src="./images/niki.gif">
+        <img class="img1" src="./images/NikiDeSaintPhalle1.png">
+        <img class="img2" src="./images/NikiDeSaintPhalle2.png">
+        <div class="proj2">Hypothetical Gallery Posters made for The Niki De saint Phalle Structures For Life show at MomaPs1S </div>
+        <img class="img2" src="./images/niki2.gif">
     </div>
 </body>
 </html>
