--- a/websprite/lou/caps.html
+++ b/websprite/lou/caps.html
@@ -10,21 +10,21 @@
 <body>
     <div class="title">
         <div class="titleColumn">
-            <h1>Lourdes Salazar</h1>
+            <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!-- <a class="selected" href=caps.html> ★Caps </a>--> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a><a class="selected" href=caps.html> ★Caps </a> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html">★etcetera</a></h2>
         </div>
     </div>
     <div class="images">
-        <div class="img3">
+        <div class="proj1"> <br>A typographical landscape exploration of Guatemala city's loud all caps signage.<br>2021</div>
+        <div class="img2">
             <img src="./images/caps.gif">
         </div>
-        <div class="proj">Typographical posters inspired by <br> the Riot Grrl Manifesto <br> </div>
-        <div class="img2">
+        <div class="proj2">Compiled through google maps<br>exploring home from a destance</div>
+        <div class="img3">
             <img src="./images/bloc.gif">
         </div>
-        <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
     </div>
 </body>
 </html>
