--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -10,7 +10,7 @@
 <body>
     <div class="title">
         <div class="titleColumn">
-            <h1>Lourdes Salazar</h1>
+            <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
             <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="louphoria.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!-- ★Caps--> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a class="selected" href="etc.html"> etcetera</a></h2>
@@ -20,16 +20,8 @@
         <div class="img1">
             <img class="image2" src="./images/lush.gif">
         </div>
-        <div class="proj">2022 <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
         <div class="img2">
             <img class="image2" src="./images/">
-        </div>
-        <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
-        <div class="img1">
-            <img class="image2" src="./images/louweb3.jpg">
-        </div>
-        <div class="img2">
-            <img class="image2" src="./images/igirlslide1.jpg">
         </div>
     </div>
 </body>
