--- a/websprite/lou/girlonline.html
+++ b/websprite/lou/girlonline.html
@@ -10,7 +10,7 @@
 <body>
     <div class="title">
         <div class="titleColumn">
-            <h1>Lourdes Salazar</h1>
+            <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
             <h2>Projects: <a class="selected" href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a><!---- ★Caps--> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
@@ -20,7 +20,7 @@
         <div class="img1">
             <img class="image2" src="./images/louprint1.jpg">
         </div>
-        <div class="proj">Girl Online3 is a publication <br> exploring girlhood on the internet <br> </div>
+        <div class="proj1">Girl Online3 is a publication <br> exploring girlhood on the internet <br> </div>
         <div class="img2">
             <img class="image2" src="./images/louweb2.jpg">
         </div>
