--- a/websprite/lou/ux.html
+++ b/websprite/lou/ux.html
@@ -10,7 +10,7 @@
 <body>
     <div class="title">
         <div class="titleColumn">
-            <h1>Lourdes Salazar</h1>
+            <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
             <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!-- ★Caps--> <a href=Structures.html>★Structures for life </a> <br> <a href="">  ★Renou</a> <a href="time.html">★Time</a><a href="ux.html" class="selected"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
@@ -18,7 +18,7 @@
     </div>
     <div class="images3">
         <img class="image3" src="./images/inone1.jpg">
-        <div class="projux1">Digital Product Design Case Study </div>
+        <div class="projux1">Digital Product Design Case Study<br>2022 </div>
         <img class="image3" src="./images/inone2.jpg">
         <div class="projux2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
         <img class="image3" src="./images/inone3.jpg">
