--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="louphoria.css">
     <title>scroll</title>
 </head>
-<body class="main">
+<body>
     <div class="title">
         <div class="titleColumn">
             <h1><a class="selected" href="lou.html">Lourdes Salazar</a></h1>
@@ -15,7 +15,15 @@
         <div class="titleColumn">
             <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!--<a href=caps.html> ★Caps </a> --> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
-    <img src="./images/hearthands.jpg" style="width: 100%;">
+    </div>
+    <div class="phone">
+            <h3><a class="selected" href="lou.html">Lourdes<br>Salazar</a></h3>
+            <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+    </div>
+    <div class="phonecont">
+        <img src="./images/hearthands.jpg" style="width: 100%;">
+        <img src="./images/hearthands.jpg" style="width: 100%;">
+        <img src="./images/hearthands.jpg" style="width: 100%;">
     </div>
 </body>
 </html>
