--- a/websprite/lou/caps.html
+++ b/websprite/lou/caps.html
@@ -16,6 +16,10 @@
             <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a><a class="selected" href=caps.html> ★Caps </a> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html">★etcetera</a></h2>
         </div>
     </div>
+    <div class="phone">
+        <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html class="selected"> ★Caps</a> </a><a href="">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+    </div>
     <div class="images">
         <div class="proj1"> <br>A typographical landscape exploration of Guatemala city's loud all caps signage.<br>2021</div>
         <div class="img2">
@@ -23,6 +27,18 @@
         </div>
         <div class="proj2">Compiled through google maps<br>exploring home from a destance</div>
         <div class="img3">
+            <img src="./images/bloc.gif">
+        </div>
+    </div>
+    <div class="phonecont">
+        <h5>Caps Lock</h5>
+        <h6>A typographical landscape exploration of Guatemala city's loud all caps signage.<br>2021
+        </h6>
+        <div class="img">
+            <img src="./images/caps.gif" max-width="80%">
+        </div>
+        <h6>Compiled through google maps exploring home from a distance</h6>
+        <div class="img">
             <img src="./images/bloc.gif">
         </div>
     </div>
