--- a/websprite/lou/riot.html
+++ b/websprite/lou/riot.html
@@ -16,6 +16,10 @@
             <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a class="selected" href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!--★Caps--> <a href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
+    <div class="phone">
+        <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html" class="selected"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+    </div>
     <div class="images">
         <div class="img1">
             <img src="./images/manifesto1.jpg" width="500px">
@@ -31,6 +35,12 @@
         <div class="img2">
             <img src="./images/Manifesto scan 1.jpg" width="500px">
         </div>
+    </div>
+    <div class="phonecont">
+        <img src="./images/manifesto1.jpg">
+        <img src="./images/MANIFESTO_DRAFTS-03.jpg">
+        <img src="./images/manifesto2.png">
+        <img src="./images/Manifesto scan 1.jpg">
     </div>
 </body>
 </html>
