--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -13,12 +13,12 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="">  ★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="https://www.instagram.com/renougt/">  ★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a class="selected" href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a class="selected" href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
     </div>
     <div class="images2">
         <img class="image3" src="./images/loom1.png">
@@ -29,6 +29,21 @@
         <img class="image3" src="./images/loom6.png">
         <img class="image3" src="./images/loom7.png">
         <div class="projux3">2021 <br> parsons school of design <br> Digital product design <br> </div>
+    </div>
+    <div class="phonecont">
+        <img src="./images/loom1.png">
+        <img src="./images/loom2.png">
+        <img src="./images/loom3.png">
+        <img src="./images/loom4.png">
+        <img src="./images/loom5.png">
+        <img src="./images/loom6.png">
+        <img src="./images/loom7.png">
+        <img src="./images/loom8.png">
+        <img src="./images/loom9.png">
+        <img src="./images/loom10.png">
+        <img src="./images/loom11.png">
+        <img src="./images/loom12.png">
+        <img src="./images/loom13.png">
     </div>
 </body>
 </html>
