--- a/websprite/lou/Structures.html
+++ b/websprite/lou/Structures.html
@@ -13,12 +13,12 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <a href=caps.html>★Caps</a> <a class="selected" href=Structures.html>★Structures for life </a> <br> <a href="">★Renou</a> <a href="time.html">★Time</a><a href="ux.html">★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <a href=caps.html>★Caps</a> <a class="selected" href=Structures.html>★Structures for life </a> <br> <a href="https://www.instagram.com/renougt/">★Renou</a> <a href="time.html">★Time</a><a href="ux.html">★inone </a><br><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="">★Renou</a><br><a href=Structures.html class="selected">★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html class="selected">★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
     </div>
     <div class="images">
         <div class="proj1">Gallery Posters<br>2020</div>
@@ -27,6 +27,11 @@
         <img class="img2" src="./images/NikiDeSaintPhalle2.png">
         <div class="proj2">Hypothetical Gallery Posters made for The Niki De saint Phalle Structures For Life show at MomaPs1S </div>
         <img class="img2" src="./images/niki2.gif">
+    </div>
+    <div class="phonecont">
+        <img src="./images/NikiDeSaintPhalle1.png">  
+        <img src="./images/NikiDeSaintPhalle2.png">
+        <img src="./images/niki2.gif">
     </div>
 </body>
 </html>
