--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -18,11 +18,11 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a class="selected" href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="time.html"> ★Type </a><a href="ux.html"> ★inone </a><a class="selected" href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
     </div>
     <div class="images2">
         <img class="image3" src="./images/loom1.png">
-        <div class="projux1">Digital Product Design Case Study </div>
+        <div class="projux1">Digital Product Design Case Study<br>2021 </div>
         <img class="image3" src="./images/loom4.png">
         <div class="projux2">Loom is a time banking app where the currency is time this app was meant to imitate and app that would belong in the gig economy inspired by the concept of time banking this app case study is meant to imitate the idealism of some of this digital spaces. (Not actually meant to be a real app but more of an exercise in ux/ui that is more so than anything a bit satirical). </div>
         <img class="image3" src="./images/loom5.png">
