--- a/websprite/lou/ux.html
+++ b/websprite/lou/ux.html
@@ -18,13 +18,12 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html" class="selected"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a><br><a href="time.html"> ★Type </a><a href="ux.html" class="selected"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
     </div>
     <div class="images3">
         <img class="image3" src="./images/inone1.jpg">
-        <div class="projux1">Digital Product Design Case Study<br>2022</div>
+        <div class="projux1">Digital Product Design Case Study<br>2021</div>
         <img class="image3" src="./images/inone2.jpg">
-        <div class="projux2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
         <img class="image3" src="./images/inone3.jpg">
         <img class="image3" src="./images/inone6.jpg">
         <img class="image3" src="./images/inone7.jpg">
