--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -13,19 +13,26 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="louphoria.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!-- ★Caps--> <a href=Structures.html>★Structures for life </a> <br> <a href="https://www.instagram.com/renougt/">★Renou</a> <a href="time.html">★Time</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a class="selected" href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="louphoria.html"> ★Riot Grrrl Posters</a> <br><a href="scroll.html"> ★Scroll</a> <!-- ★Caps--> <a href=Structures.html>★Structures for life </a> <br> <a href="https://www.instagram.com/renougt/">★Renou</a> <a href="time.html">★Type</a><a href="ux.html"> ★inone </a><br><a href="loom.html"> ★loom </a><a class="selected" href="etc.html"> etcetera</a></h2>
         </div>
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a class="selected" href="etc.html"> etcetera</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="time.html"> ★Type </a>
+        <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a class="selected" href="etc.html"> etcetera</a></h4>
     </div>
     <div class="images2">
         <div class="img1">
             <img class="image2" src="./images/lush.gif">
+            <h5>After Effects 2020</h5>
         </div>
         <div class="img2">
-            <img class="image2" src="./images/">
+            <img class="image2" src="./images/Good_life.gif">
+            <h5>Website Design 2020</h5>
+        </div>
+        <div class="img1">
+            <img class="image2" src="./images/modernists.png">
+            <h5>After Effects 2020</h5>
         </div>
     </div>
 </body>
