--- a/websprite/lou/caps.html
+++ b/websprite/lou/caps.html
@@ -18,7 +18,7 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html class="selected"> ★Caps</a> </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a><br><a href="time.html"> ★Type </a><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html class="selected"> ★Caps</a> </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
     </div>
     <div class="images">
         <div class="proj1"> <br>A typographical landscape exploration of Guatemala city's loud all caps signage.<br>2021</div>
