--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -21,7 +21,7 @@
     </div>
     <div class="phone">
             <h3><a class="selected" href="lou.html">Lourdes<br>Salazar</a></h3>
-            <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+            <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
     </div>
     <div class="phonecont">
         <img src="./images/hearthands.jpg" style="width: 100%;">
