--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -18,7 +18,7 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="">★Renou</a><br><a href=Structures.html>★Structures for life </a><br><a href="time.html" class="selected"> ★Type </a><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html" class="selected"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Scroll</a><a href=caps.html> ★Caps </a><a href="">★Renou</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
     </div>
     <div class="images2">
         <div class="img1">
@@ -35,6 +35,10 @@
         <div class="img2">
             <img class="image2" src="./images/igirlslide1.jpg">
         </div>
+    </div>
+    <div class="phonecont">
+        <img src="./images/type_r_1.jpg">
+        <img src="./images/type_r_2.jpg">
     </div>
 </body>
 </html>
